# CalcEffTool

./: README.md  compile.sh  setup.sh  setup_grid.sh
CalcEfficiency/: CMakeLists.txt
CalcEfficiency/CalcEfficiency/: CalcEffAlg.h  EventTree.h  EventTreeFCBM.h  MuInfoGetter.h  MuonExtUtils.h  ParticleSelecterTool.h  TagAndProbe.h  Utils.h  VrtFitUtils.h
CalcEfficiency/cmt/: cleanup.csh  cleanup.sh  requirements  setup.csh  setup.sh  version.cmt
CalcEfficiency/run/: CalcEffAlg_options.py  getgrl.sh  hadder.sh  makelist.sh  newmakelist.sh  run.sh  sub_pathena.sh
CalcEfficiency/share/: CalcEffAlg_options.py
CalcEfficiency/src/: CalcEffAlg.cxx  EventTree.cxx  EventTreeFCBM.cxx  MuInfoGetter.cxx  MuonExtUtils.cxx  ParticleSelecterTool.cxx  TagAndProbe.cxx  Utils.cxx  VrtFitUtils.cxx
CalcEfficiency/src/components/: CalcEfficiency_entries.cxx  CalcEfficiency_load.cxx
run/: CalcEffAlg_options.py  Zmumu_test.list  preparedatalist.sh  run.sh  rungroup.sh
run/LOGS/: .gitkeep
run/lists/: data16.list  data18_0219.list  mc16_0122.list  mc16noguchisample.list
run_grid/: CalcEffAlg_optionsGrid.py  current_grl.xml  data16_13TeV.periodAllYear_HEAD_Unknown_PHYS_StandardGRL_All_Good_25ns.xml  data18_13TeV.periodAllYear_HEAD_Unknown_PHYS_StandardGRL_All_Good_25ns.xml  sub_pathena.sh  test.list  yy_newmakelist.sh
